[package]
name = "web3_name_service"
version = "0.1.0"
edition = "2021"
authors = ["leftear1321@gmail.com"]
license = "MIT"             
repository = "https://github.com/left-TTC/web3-name-service"  

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.7"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.2.1"
thiserror = "2.0.12"

[lib]
crate-type = ["cdylib", "lib"]
