[package]
name = "web3-domain-name-service"
description = "web3 name service main program"
version = "0.1.11"
edition = "2021"
authors = ["leftear1321@gmail.com"]
license = "MIT"             
repository = "https://github.com/left-TTC/web3-name-service"  

[features]
no-entrypoint = []
test-sbf = []
devnet = []

default = ["devnet"]

[dependencies]
borsh = "1.5.7"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.1.14"
thiserror = "2.0.12"
solana-system-interface = { version = "1", features = ["bincode"] }

[lib]
crate-type = ["cdylib", "lib"]
